@@ -61,6 +61,11 @@
       </div>
 
       <div class="visualClear"><!-- --></div>
+
+      <iframe style="display: none"
+              tal:condition="view/do_visit_canonical_uri"
+              tal:attributes="src context/canonical_uri"></iframe>
+
     </div>
 
     <metal:portlets fill-slot="portlets_two_slot"
